alteracoes solicitadas pelo will

--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
 layout: page
 ---
 
-
 <h3>Postagens</h3>
 <p>
-  Seja bem-vindo(a) ao blog da AADV! Clique
-  <a href="/posts">aqui</a> para ver todos os posts,
-  ou acompanhe as categorias a seguir.
+  Boas vindas ao site de suporte ATIVIDADES AADV!
+  Acompanhe as categorias de atividades a seguir. Ou para ver direto os posts de atividades, clique
+  <a href="/posts">aqui.</a>
 </p>
 
 <h3>Categorias</h3>
