Refatorar exibição de categorias principais e adicionar categorias de atividades

--- a/all_posts.html
+++ b/all_posts.html
@@ -1,6 +1,7 @@
 ---
 layout: posts
 permalink: /posts
+list_title: Todas as postagens
 ---
 {%- for post in site.posts -%}
   {% include post_render.html %}
