Adicionar novos posts reais

--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@ category_links:
   - noticias
   - eventos
   - emprego
+  - atividade-geral
 
 pretty_categories:
   - Atividades
   - Notícias
   - Eventos
   - Emprego
+  - Atividade Geral
 ---
 
 <h1 class="page-heading">Postagens</h1>
